fix mobile where box is overflowing

--- a/css/styles.css
+++ b/css/styles.css
@@ -147,7 +147,7 @@ button:active{
   
     /* CSS */
     .card{
-        width: 420px;
+        width: 350px;
     }
     
 }
